--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "mongodb": "^2.2.31",
     "mongoose": "^4.12.0",
     "passport": "^0.4.0",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "superagent": "^4.0.0-beta.5"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
+    "chai-http": "^4.2.0",
     "eslint": "^4.8.0",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
