--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.1",
+    "extend": "^3.0.2",
     "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.11",
     "mongodb": "^2.2.31",
-    "mongoose": "^4.12.0",
+    "mongoose": "^5.4.14",
+    "mpath": "^0.5.1",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "superagent": "^4.0.0-beta.5"
